cmake_minimum_required(VERSION 3.13)
project(src C)

set(CMAKE_C_STANDARD 11)

include_directories(.)

add_executable(src
        modules/helloblock.c
        modules/hellotype.c
        modules/helloworld.c
        modules/testmodule.c
        adlist.c
        adlist.h
        ae.c
        ae.h
        ae_epoll.c
        ae_evport.c
        ae_kqueue.c
        ae_select.c
        anet.c
        anet.h
        aof.c
        asciilogo.h
        atomicvar.h
        bio.c
        bio.h
        bitops.c
        blocked.c
        childinfo.c
        cluster.c
        cluster.h
        config.c
        config.h
        crc16.c
        crc64.c
        crc64.h
        db.c
        debug.c
        debugmacro.h
        defrag.c
        dict.c
        dict.h
        endianconv.c
        endianconv.h
        evict.c
        expire.c
        fmacros.h
        geo.c
        geo.h
        geohash.c
        geohash.h
        geohash_helper.c
        geohash_helper.h
        help.h
        hyperloglog.c
        intset.c
        intset.h
        latency.c
        latency.h
        lazyfree.c
        lzf.h
        lzf_c.c
        lzf_d.c
        lzfP.h
        memtest.c
        module.c
        multi.c
        networking.c
        notify.c
        object.c
        pqsort.c
        pqsort.h
        pubsub.c
        quicklist.c
        quicklist.h
        rand.c
        rand.h
        rax.c
        rax.h
        rax_malloc.h
        rdb.c
        rdb.h
        redis-benchmark.c
        redis-check-aof.c
        redis-check-rdb.c
        redis-cli.c
        redisassert.h
        redismodule.h
        release.c
        replication.c
        rio.c
        rio.h
        scripting.c
        sds.c
        sds.h
        sdsalloc.h
        sentinel.c
        server.c
        server.h
        setproctitle.c
        sha1.c
        sha1.h
        siphash.c
        slowlog.c
        slowlog.h
        solarisfixes.h
        sort.c
        sparkline.c
        sparkline.h
        syncio.c
        t_hash.c
        t_list.c
        t_set.c
        t_string.c
        t_zset.c
        testhelp.h
        util.c
        util.h
        version.h
        ziplist.c
        ziplist.h
        zipmap.c
        zipmap.h
        zmalloc.c
        zmalloc.h)
